# stigmergy-CLI-Multi-Agents

./: .env.coordination  .eslintrc.js  .gitignore  .npmignore  .npmignore.large  .resumesession  .skill-feedback.json  .stigmergy-memory.json  ACCURACY_SYSTEM_DESIGN.md  AGENTS.md  AI_CLI_CROSS_CALL_COMPLETION_REPORT.md  AI_CLI_CROSS_CALL_GUIDE.md  ALGORITHMS.md  API_DOCS.md  ARCHITECTURE_REFACTOR_PLAN.md  AUTOMATION_SUMMARY.md  AUTO_EVOLUTION_GUIDE.md  AUTO_EVOLUTION_README.md  AUTO_EVOLUTION_STATUS.md  AUTO_FIX_VALIDATION_REPORT.md  AUTO_PERMISSION_CLI_INSTALL_ANALYSIS.md  AUTO_PERMISSION_IMPLEMENTATION_REPORT.md  AUTO_SYNC_EXPLAINED.md  BETA_RELEASE_TEST_REPORT.md  CERTAINTY.md  CHANGELOG.md  CI_ENVIRONMENT_EXPLANATION.md  CLAUDE.md  CLAUDE_IFLOW_INTEGRATION_ISSUES.md  CLEANUP_REPORT.md  CLEANUP_VERIFICATION_REPORT.md  CLINE_INTEGRATION_SUMMARY.md  CLIScanner-fix.js  CLI_EXTENSION_GUIDE.md  CLI_HELP_ANALYSIS_TEST_REPORT.md  CLI_INTERACTION_MODE_ANALYSIS.md  CLI_INTERACTIVE_MODE_ANALYSIS.md  CLI_ORCHESTRATION_TEST_REPORT.md  CLI_SKILLS_DIRECTORY_RESEARCH.md  CLI_SPECIFIC_SKILLS.md  (+1737 more)
.agent/: agent.md
.agent/skills/ant/: SKILL.md  agent.md  pyproject.toml
.agent/skills/ant/scripts/: ant_analysis_with_fallback.py
.agent/skills/field-expert/: SKILL.md  WORKFLOW_SPEC.md  agent.md  pyproject.toml  workflow_spec.json
.agent/skills/field-expert/field_analysis_workflow/input/processed/: combined_input.json  llm_input.json
.agent/skills/field-expert/modules/: boundary_analysis.py  capital_analysis.py  habitus_analysis.py
.agent/skills/field-expert/prompts/: boundary_analysis.txt  boundary_analysis_simple.txt  capital_analysis.txt  dynamics_analysis.txt  habitus_analysis.txt
.agent/skills/field-expert/scripts/: debug_output.txt  debug_output_converted.txt  field_analysis_tool.py  field_expert_analyzer.py  generate_report.py  prepare_data.py  run_workflow.py  summarize_data.py  temp_prompt_20260106_213035_964505.txt  temp_prompt_20260106_213534_264265.txt  temp_prompt_20260106_213932_601575.txt  temp_prompt_20260106_214330_241706.txt  test_host_llm.py  test_stigmergy_llm.py
.agent/skills/grounded-theory-expert/: SKILL.md  agent.md  pyproject.toml
.agent/skills/grounded-theory-expert/scripts/: gt_expert_analyzer.py
.agent/skills/grounded-theory-expert/stages/: axial_coding.py  open_coding.py  selective_coding.py
.agent/skills/grounded-theory-expert/tests/sample-cases/: hongloumeng.txt  sanguoyanyi_excerpts.txt  shuihuzhuan_excerpts.txt  xiyouji_excerpts.txt  四大名著ANT分析报告.md
.agent/skills/grounded-theory-expert/tools/: memo_writer.py  saturation_checker.py
.agent/skills/mathematical-statistics/: SKILL.md  agent.md  pyproject.toml
.agent/skills/mathematical-statistics/scripts/: statistics_toolkit.py
.agent/skills/network-computation/: SKILL.md  agent.md  pyproject.toml
.agent/skills/network-computation/scripts/: calculate_centrality.py
.agent/skills/validity-reliability/: SKILL.md  agent.md  pyproject.toml
.agent/skills/validity-reliability/scripts/: validity_reliability_toolkit.py
.claude/: settings.local.json
.gates/: GATEKEEPER.md  OATH.md  README.md  gatekeeper.js
.npm-global/: codex.cmd  stigmergy  stigmergy.cmd  stigmergy.ps1
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.soul-evolution-results/: evolution-2026-03-22T09-59-48-419Z.json
.stigmergy/: config.json  shared-memory-store.js
.stigmergy-project/: stigmergy-config.json
.wiki-articles/: Stigmergy_______.json
.wiki-editing-sessions/: session-2026-03-22T10-22-36-064Z.json
ai-cli-memory-research/: README.md
archive/: .gitignore  AI_CLI_TOOLS_EXTENSION_REPORT.md.backup  CLI_INTEGRATION_SPECIFICATION.md.backup  COLLABORATION_LOG.md.backup  CONTRIBUTING.md  DEPLOYMENT_VALIDATE.py.backup  FINAL_FEATURE_VERIFY.py.backup  FINAL_IMPLEMENTATION_COMPLETE.md.backup  IMPLEMENTATION_PLAN.md.backup  INDIRECT_COLLABORATION_REQUIREMENTS.md.backup  README.md  REAL_CLI_HOOKER.py.backup  STIGMERGY_COLLABORATION_SPECIFICATION.md.backup  UNIFIED_IMPLEMENTATION_PLAN.md.backup  VERIFY_IMPLEMENTATION.py.backup  auto_integrate.sh.backup  config.json  deploy.py.backup  install_unix.sh  install_windows.bat  main.js.backup  pyproject.toml
archive/demo_scripts/: demo_core_functionality.py  project_manager.py  working_solution.py
archive/obsolete_docs/: AUTO-INSTALL-GUIDE.md  BEST_SOLUTION.md  CLAUDE_ADAPTER_TDD_REPORT.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_FOR_OTHERS.md  DETAILED_CALL_CHAINS.md  FINAL_BEST_PRACTICE.md  FINAL_VERIFICATION_REPORT.md  GEMINI_ADAPTER_TDD_REPORT.md  IMPLEMENTATION_COMPLETE.md  INSTALL-FINAL.md  NPX-DEPLOY-GUIDE.md  NPX-PUBLISH-GUIDE.md  PROJECT_COMPLETION.md  PROJECT_REALITY_ANALYSIS.md  PUBLISH_REPORT.md  QUICK-INSTALL.md  QWENCODE_ADAPTER_TDD_REPORT.md  README-FINAL.md  SIMPLE_BEST_PRACTICE.md  STIGMERGY_DEPLOYMENT_COMPLETE.md  TEST_VERIFICATION_PLAN.md
archive/obsolete_files/: DEPLOYMENT_VERIFICATION.md  INSTALL_GUIDE_CLI_TOOLS.md  PRODUCT_DELIVERY_FINAL.md  RESEARCH_PLAN.md  UNIVERSAL_AI_CLI_PLUGIN_ARCHITECTURE.md
archive/obsolete_files/docs/: PROJECT_STRUCTURE.md
archive/obsolete_files/examples/: basic_usage.py
archive/obsolete_files/output/: ai_router.cmd  smart_router.cmd
archive/obsolete_files/output/auto_deploy/: ai_router.py  config.json  smart_router.py  validate_project.py
archive/obsolete_files/templates/: tool_template.json
archive/obsolete_files/tools/: config_generator.py
archive/obsolete_scripts/: deploy.py  install-local.bat  install-local.sh  install.bat  install.sh  validate-deployment.js
archive/reports/: deployment-validation-report.json
archive/src/: enhanced_universal_cli_setup.py  shell_integration.py  smart_router_creator.py  universal_cli_setup.py
archive/website/: index1.html  index2.html  installation.html
archive/website/ru/: index.html
archived_files/: README.md  comprehensive_test.js  examine_hooks.js  test_cli_hook_detection.js  test_cross_cli_communication.js  test_full_adapter_deployment.js  test_hook_deployment.js  test_hook_deployment_scripts.js  test_hook_functionality.js  (+3 more)
(+2033 files in other folders)
