[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-cli-router"
version = "1.0.0"
description = "AI工具智能路由器 | 统一管理Claude、Gemini、Kimi等AI CLI工具 | 自然语言命令行 | 零配置部署 | 跨平台兼容"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Smart CLI Router Team", email = "contact@smart-cli-router.com"}
]
maintainers = [
    {name = "Smart CLI Router Team", email = "contact@smart-cli-router.com"}
]
keywords = ["ai", "cli", "router", "smart", "natural-language", "automation", "cross-platform", "ai-tools", "claude", "gemini", "kimi", "qwen", "ollama", "nlp", "command-line", "ai-integration", "intelligent-routing", "zero-config", "multi-tool", "developer-tools", "enterprise-ai", "automation-deployment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
enhanced = [
    "colorama>=0.4.4",
    "click>=8.0",
    "requests>=2.25",
]

[project.urls]
Homepage = "https://github.com/your-username/smart-cli-router"
Documentation = "https://smart-cli-router.readthedocs.io/"
Repository = "https://github.com/your-username/smart-cli-router.git"
"Bug Tracker" = "https://github.com/your-username/smart-cli-router/issues"

[project.scripts]
smart-router = "src.universal_cli_setup:main"
smart-create = "src.smart_router_creator:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true