[project]
name = "ant"
version = "2.0.0"
description = "鍩轰簬琛屽姩鑰呯綉缁滅悊璁猴紝瀵瑰晢涓氱敓鎬佺郴缁熶腑浜虹被鍜岄潪浜虹被琛屽姩鑰呭強鍏跺叧绯荤綉缁滆繘琛屽垎鏋愮殑鎶€鑳斤紝杩愮敤杞瘧鐞嗚鍜屽箍涔夊绉版€у師鍒欙紝杩借釜琛屽姩鑰呯綉缁滄瀯寤哄拰婕斿寲杩囩▼"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
