[tool.poetry]
name = "grounded-theory-expert"
version = "1.0.0"
description = "扎根理论专家分析技能，整合开放编码、轴心编码、选择式编码、备忘录撰写和理论饱和度检验功能"
authors = ["chinese-social-sciences-subagents"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jieba = {version = "^0.42.1", optional = true}
pandas = {version = "^1.3.0", optional = true}
numpy = {version = "^1.21.0", optional = true}

[tool.poetry.extras]
nlp = ["jieba"]
analysis = ["pandas", "numpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gt-expert-analyzer = "scripts.gt_expert_analyzer:main"