[project]
name = "mathematical-statistics"
version = "2.0.0"
description = "鍩轰簬鏁扮悊缁熻鐞嗚锛屽浼佷笟杩愯惀鏁版嵁銆佺ぞ浼氱瀛︾爺绌舵暟鎹瓑杩涜缁熻鍒嗘瀽鐨勬妧鑳斤紝杩愮敤鎻忚堪鎬х粺璁°€佹帹鏂粺璁°€佸洖褰掑垎鏋愮瓑鏂规硶锛岃瘎浼版暟鎹壒寰佸拰鍙橀噺鍏崇郴"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
