[project]
name = "network-computation"
version = "2.0.0"
description = "鍩轰簬绀句細缃戠粶鍒嗘瀽鐞嗚锛屽浼佷笟鍏崇郴缃戠粶銆佸悎浣滅綉缁溿€佷緵搴旈摼缃戠粶绛夎繘琛屽垎鏋愮殑鎶€鑳斤紝杩愮敤涓績鎬у垎鏋愩€佺ぞ鍖烘娴嬨€佺綉缁滃彲瑙嗗寲绛夋柟娉曪紝璇勪及缃戠粶缁撴瀯鍜屽叧绯诲己搴?
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
